--- a/index.html
+++ b/index.html
@@ -5,42 +5,77 @@
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
   </head>
-  <header>
-    <h1>
-      <a href="/">This Is Torabis</a>
-    </h1>
-    <nav>
-      <ul>
-        <li>
-          <a href="#about-me">About Me</a>
-        </li>
-        <li>
-          <a href="#work">Work</a>
-        </li>
-        <li>
-          <a href="#contact-me">Contact Me</a>
-        </li>
-        <li>
-          <a href="#resume">Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
   <body>
+    <header>
+      <h1>
+        <a href="/">This Is Torabis</a>
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About Me</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#contact-me">Contact Me</a>
+          </li>
+          <li>
+            <a href="#resume">Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <section class="hero">
-      <div class="hero-cta">
+      <div>
         <h2>Coding Is Art</h2>
       </div>
     </section>
-    <section id="about-me">
-      <h2>About Me</h2>
+    <section class="intro">
+      <div id="about-me" class="intro-a">
+        <div class="left-row">
+          <h2>About Me</h2>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            vero totam illo, consectetur eligendi atque, exercitationem dicta
+            perferendis ratione et impedit excepturi recusandae esse nisi,
+            pariatur nemo neque accusantium? Cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            vero totam illo, consectetur eligendi atque, exercitationem dicta
+            perferendis ratione et impedit excepturi recusandae esse nisi,
+            pariatur nemo neque accusantium? Cupiditate! 
+          </p>
+        </div>
+      </div>
+      <div id="work" class="intro-b">
+        <div class="left-row">
+          <h2>Work</h2>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            vero totam illo, consectetur eligendi atque, exercitationem dicta
+            perferendis ratione et impedit excepturi recusandae esse nisi,
+            pariatur nemo neque accusantium? Cupiditate!
+            
+          </p>
+        </div>
+      </div>
+      <div id="contact-me" class="intro-c">
+        <div class="left-row">
+          <h2>Contact Me</h2>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            vero totam illo, consectetur eligendi atque, exercitationem dicta
+            perferendis ratione et impedit excepturi recusandae esse nisi,
+            pariatur nemo neque accusantium? Cupiditate!
+          </p>
+        </div>
+      </div>
     </section>
-    <section id="work">
-      <h2>Work</h2>
-    </section>
-    <section id="contact-me">
-      <h2>Contact Me</h2>
-    </section>
-
   </body>
 </html>
