--- a/index.html
+++ b/index.html
@@ -67,15 +67,23 @@
         <div class="left-row">
           <h2>Contact Me</h2>
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            vero totam illo, consectetur eligendi atque, exercitationem dicta
-            perferendis ratione et impedit excepturi recusandae esse nisi,
-            pariatur nemo neque accusantium? Cupiditate!
-          </p>
+        <div class="links">
+            <div>
+            <a href="tel:949-405-6663">949-405-6663</a>
+            </div>
+            <div>
+            <a href = "mailto: sadihome@gmail.com">sadihome@gmail.com</a>
+            </div>
+            <div>
+            <a href="url">GitHub</a>
+            </div>  
+            <div>
+            <a href="url">Twitter</a>
+            </div>
+            <div>
+            <a href="url">Spotify</a>
+            </div>
         </div>
-      </div>
     </section>
   </body>
 </html>
