--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
         <div class="left-row">
           <h2>Work</h2>
         </div>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-            vero totam illo, consectetur eligendi atque, exercitationem dicta
-            perferendis ratione et impedit excepturi recusandae esse nisi,
-            pariatur nemo neque accusantium? Cupiditate!
-            
-          </p>
+        <div class="img-grid">
+         <img id="pic-1" src="./assets/images/surf.jpg" alt="surfing woman">
+         <img id="pic-2" src="./assets/images/led-wall.jpg" alt="lights on the wall">
+         <img id="pic-3" src="./assets/images/calculator.jpg" alt="calculator">
+         <img id="pic-4" src="./assets/images/puzzel.jpg" alt="puzzel">
+         <img id="pic-5" src="./assets/images/runbuddy.jpg" alt="running">
         </div>
       </div>
       <div id="contact-me" class="intro-c">
