--- a/index.html
+++ b/index.html
@@ -54,11 +54,20 @@
           <h2>Work</h2>
         </div>
         <div class="img-grid">
+        <a href="">
          <img id="pic-1" src="./assets/images/surf.jpg" alt="surfing woman">
+        </a>
+        <a href="">
          <img id="pic-2" src="./assets/images/led-wall.jpg" alt="lights on the wall">
+        </a>
+        <a href="">
          <img id="pic-3" src="./assets/images/calculator.jpg" alt="calculator">
+         </a>
+         <a href="">
          <img id="pic-4" src="./assets/images/puzzel.jpg" alt="puzzel">
+         <a href="">
          <img id="pic-5" src="./assets/images/runbuddy.jpg" alt="running">
+        </a>
         </div>
       </div>
       <div id="contact-me" class="intro-c">
