--- a/index.html
+++ b/index.html
@@ -55,18 +55,19 @@
         </div>
         <div class="img-grid">
         <a href="">
-         <img id="pic-1" src="./assets/images/surf.jpg" alt="surfing woman">
+         <img class="pic" src="./assets/images/surf.jpg" alt="surfing woman">
         </a>
         <a href="">
-         <img id="pic-2" src="./assets/images/led-wall.jpg" alt="lights on the wall">
+         <img class="pic" src="./assets/images/led-wall.jpg" alt="lights on the wall">
         </a>
         <a href="">
-         <img id="pic-3" src="./assets/images/calculator.jpg" alt="calculator">
+         <img class="pic" src="./assets/images/calculator.jpg" alt="calculator">
          </a>
          <a href="">
-         <img id="pic-4" src="./assets/images/puzzel.jpg" alt="puzzel">
+         <img class="pic" src="./assets/images/puzzel.jpg" alt="puzzel">
+         </a>
          <a href="">
-         <img id="pic-5" src="./assets/images/runbuddy.jpg" alt="running">
+         <img class="pic" src="./assets/images/runbuddy.jpg" alt="running">
         </a>
         </div>
       </div>
