--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
   </head>
   <body>
     <header>
       <h1>
-        <a href="/">This Is Torabis</a>
+        <a href="/">This is Torabis</a>
       </h1>
       <nav>
         <ul>
@@ -29,7 +30,7 @@
     </header>
     <section class="hero">
       <div>
-        <h2>Coding Is Art</h2>
+        <h2>Coding is Art</h2>
       </div>
     </section>
     <section class="intro">
@@ -55,7 +56,7 @@
         </div>
         <div class="img-grid">
         <a href="">
-         <img class="pic" src="./assets/images/surf.jpg" alt="surfing woman">
+         <img class="pic" src="./assets/images/surf.jpg" alt="surfing woman"> 
         </a>
         <a href="">
          <img class="pic" src="./assets/images/led-wall.jpg" alt="lights on the wall">
