--- a/index.html
+++ b/index.html
@@ -55,20 +55,25 @@
           <h2>Work</h2>
         </div>
         <div class="img-grid">
-        <a href="">
-         <img class="pic" src="./assets/images/surf.jpg" alt="surfing woman"> 
+        <a href="https://github.com/Torabis/Weather-Dashboard">
+         <img class="pic" src="./assets/images/weather.jpg" alt="wet umbrella">
+         <span>Weather Dashboard</span>
         </a>
-        <a href="">
-         <img class="pic" src="./assets/images/led-wall.jpg" alt="lights on the wall">
+        <a href="https://torabis.github.io/WorkDayScheduler/">
+         <img class="pic" src="./assets/images/schedule.jpeg" alt="busy offfice">
+         <span>WorkDay Scheduler</span>
         </a>
-        <a href="">
+        <a href="https://github.com/Torabis/PasswordGenerator">
          <img class="pic" src="./assets/images/calculator.jpg" alt="calculator">
+         <span>Password Generator</span>
          </a>
-         <a href="">
-         <img class="pic" src="./assets/images/puzzel.jpg" alt="puzzel">
+         <a href="https://github.com/Torabis/local-guide">
+         <img class="pic" src="./assets/images/travel.jpg" alt="airplane">
+         <span>Local Guide</span>
          </a>
          <a href="">
          <img class="pic" src="./assets/images/runbuddy.jpg" alt="running">
+         <span></span>
         </a>
         </div>
       </div>
@@ -84,7 +89,7 @@
             <a href = "mailto: sadihome@gmail.com">sadihome@gmail.com</a>
             </div>
             <div>
-            <a href="url">GitHub</a>
+            <a href="https://github.com/Torabis">GitHub</a>
             </div>  
             <div>
             <a href="url">Twitter</a>
