--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2>Work</h2>
         </div>
         <div class="img-grid">
-        <a href="https://github.com/Torabis/Weather-Dashboard">
+        <a href="https://torabis.github.io/Weather-Dashboard/">
          <img class="pic" src="./assets/images/weather.jpg" alt="wet umbrella">
          <span>Weather Dashboard</span>
         </a>
@@ -63,11 +63,11 @@
          <img class="pic" src="./assets/images/schedule.jpeg" alt="busy offfice">
          <span>WorkDay Scheduler</span>
         </a>
-        <a href="https://github.com/Torabis/PasswordGenerator">
+        <a href="https://torabis.github.io/PasswordGenerator/">
          <img class="pic" src="./assets/images/calculator.jpg" alt="calculator">
          <span>Password Generator</span>
          </a>
-         <a href="https://github.com/Torabis/local-guide">
+         <a href="https://hameed1239.github.io/local-guide/">
          <img class="pic" src="./assets/images/travel.jpg" alt="airplane">
          <span>Local Guide</span>
          </a>
