--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
          <img class="pic" src="./assets/images/travel.jpg" alt="airplane">
          <span>Local Guide</span>
          </a>
-         <a href="">
-         <img class="pic" src="./assets/images/runbuddy.jpg" alt="running">
-         <span></span>
+         <a href="https://github.com/Torabis/readme-generator">
+         <img class="pic" src="./assets/images/readme.jpg" alt="read me">
+         <span>ReadMe Generator</span>
         </a>
         </div>
       </div>
